[package]
name = "sifu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
axum = { version = "0.5.13", features = ["multipart"] }
base64 = "0.13.0"
envconfig = "0.10.0"
futures = "0.3.21"
rand = "0.8.5"
thiserror = "1.0.31"
tokio = { version = "1.20.1", features = [
    "rt",
    "sync",
    "macros",
    "fs",
    "io-util",
] }
tokio-util = { version = "0.7.3", features = ["io"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
